dart/plugin/plugin.h

typedef struct plugin_string_t {
  uint8_t*ptr;
  size_t len;
} plugin_string_t;
typedef struct flutter_renderer_alignment_own_alignment_t {
  int32_t __handle;
} flutter_renderer_alignment_own_alignment_t;
typedef struct flutter_renderer_alignment_borrow_alignment_t {
  int32_t __handle;
} flutter_renderer_alignment_borrow_alignment_t;
typedef struct flutter_renderer_alignment_own_alignment_directional_t {
  int32_t __handle;
} flutter_renderer_alignment_own_alignment_directional_t;
typedef struct flutter_renderer_alignment_borrow_alignment_directional_t {
  int32_t __handle;
} flutter_renderer_alignment_borrow_alignment_directional_t;
typedef struct flutter_renderer_alignment_alignment_geometry_t {
  uint8_t tag;
  union {
    flutter_renderer_alignment_own_alignment_t     alignment;
    flutter_renderer_alignment_own_alignment_directional_t     alignment_directional;
  } val;
} flutter_renderer_alignment_alignment_geometry_t;
typedef struct flutter_renderer_enums_main_axis_alignment_t {
  uint8_t tag;
} flutter_renderer_enums_main_axis_alignment_t;
typedef struct flutter_renderer_enums_text_direction_t {
  uint8_t tag;
} flutter_renderer_enums_text_direction_t;
typedef struct flutter_renderer_enums_vertical_direction_t {
  uint8_t tag;
} flutter_renderer_enums_vertical_direction_t;
typedef struct flutter_renderer_enums_main_axis_size_t {
  uint8_t tag;
} flutter_renderer_enums_main_axis_size_t;
typedef struct flutter_renderer_enums_text_baseline_t {
  uint8_t tag;
} flutter_renderer_enums_text_baseline_t;
typedef struct flutter_renderer_enums_cross_axis_alignment_t {
  uint8_t tag;
} flutter_renderer_enums_cross_axis_alignment_t;
typedef flutter_renderer_alignment_alignment_geometry_t flutter_renderer_widget_alignment_geometry_t;
typedef flutter_renderer_enums_cross_axis_alignment_t flutter_renderer_widget_cross_axis_alignment_t;
typedef flutter_renderer_enums_main_axis_alignment_t flutter_renderer_widget_main_axis_alignment_t;
typedef flutter_renderer_enums_main_axis_size_t flutter_renderer_widget_main_axis_size_t;
typedef flutter_renderer_enums_text_direction_t flutter_renderer_widget_text_direction_t;
typedef flutter_renderer_enums_text_baseline_t flutter_renderer_widget_text_baseline_t;
typedef flutter_renderer_enums_vertical_direction_t flutter_renderer_widget_vertical_direction_t;
typedef struct flutter_renderer_widget_own_row_t {
  int32_t __handle;
} flutter_renderer_widget_own_row_t;
typedef struct flutter_renderer_widget_borrow_row_t {
  int32_t __handle;
} flutter_renderer_widget_borrow_row_t;
typedef struct flutter_renderer_widget_own_col_t {
  int32_t __handle;
} flutter_renderer_widget_own_col_t;
typedef struct flutter_renderer_widget_borrow_col_t {
  int32_t __handle;
} flutter_renderer_widget_borrow_col_t;
typedef struct flutter_renderer_widget_own_text_t {
  int32_t __handle;
} flutter_renderer_widget_own_text_t;
typedef struct flutter_renderer_widget_borrow_text_t {
  int32_t __handle;
} flutter_renderer_widget_borrow_text_t;
typedef struct flutter_renderer_widget_own_text_rich_t {
  int32_t __handle;
} flutter_renderer_widget_own_text_rich_t;
typedef struct flutter_renderer_widget_borrow_text_rich_t {
  int32_t __handle;
} flutter_renderer_widget_borrow_text_rich_t;
typedef struct flutter_renderer_widget_widget_t {
  uint8_t tag;
  union {
    flutter_renderer_widget_own_col_t     col;
    flutter_renderer_widget_own_row_t     row;
    flutter_renderer_widget_own_text_t     text;
    flutter_renderer_widget_own_text_rich_t     text_rich;
  } val;
} flutter_renderer_widget_widget_t;
typedef struct {
  flutter_renderer_widget_widget_t *ptr;
  size_t len;
} flutter_renderer_widget_list_widget_t;
typedef struct {
  bool is_some;
  flutter_renderer_widget_cross_axis_alignment_t val;
} flutter_renderer_widget_option_cross_axis_alignment_t;
typedef struct {
  bool is_some;
  flutter_renderer_widget_main_axis_alignment_t val;
} flutter_renderer_widget_option_main_axis_alignment_t;
typedef struct {
  bool is_some;
  flutter_renderer_widget_main_axis_size_t val;
} flutter_renderer_widget_option_main_axis_size_t;
typedef struct {
  bool is_some;
  flutter_renderer_widget_text_direction_t val;
} flutter_renderer_widget_option_text_direction_t;
typedef struct {
  bool is_some;
  flutter_renderer_widget_text_baseline_t val;
} flutter_renderer_widget_option_text_baseline_t;
typedef struct {
  bool is_some;
  flutter_renderer_widget_vertical_direction_t val;
} flutter_renderer_widget_option_vertical_direction_t;
typedef flutter_renderer_widget_widget_t flutter_renderer_renderer_widget_t;
typedef struct flutter_renderer_renderer_error_t {
  uint8_t tag;
} flutter_renderer_renderer_error_t;
typedef struct flutter_renderer_renderer_own_renderer_t {
  int32_t __handle;
} flutter_renderer_renderer_own_renderer_t;
typedef struct flutter_renderer_renderer_borrow_renderer_t {
  int32_t __handle;
} flutter_renderer_renderer_borrow_renderer_t;
typedef struct {
  bool is_some;
  flutter_renderer_renderer_error_t val;
} flutter_renderer_renderer_option_error_t;
typedef flutter_renderer_renderer_error_t plugin_error_t;
typedef flutter_renderer_renderer_own_renderer_t plugin_own_renderer_t;
typedef struct {
  bool is_some;
  plugin_error_t val;
} plugin_option_error_t;
void flutter_renderer_renderer_error_free(flutter_renderer_renderer_error_t *ptr);
extern void flutter_renderer_renderer_renderer_drop_own(flutter_renderer_renderer_own_renderer_t handle);
extern flutter_renderer_renderer_borrow_renderer_t flutter_renderer_renderer_borrow_renderer(flutter_renderer_renderer_own_renderer_t handle);
void flutter_renderer_renderer_option_error_free(flutter_renderer_renderer_option_error_t *ptr);
void plugin_error_free(plugin_error_t *ptr);
void plugin_option_error_free(plugin_option_error_t *ptr);
// Transfers ownership of `s` into the string `ret`
void plugin_string_set(plugin_string_t *ret, const char*s);
// Creates a copy of the input nul-terminate string `s` and
// stores it into the component model string `ret`.
void plugin_string_dup(plugin_string_t *ret, const char*s);
// Deallocates the string pointed to by `ret`, deallocating
// the memory behind the string.
void plugin_string_free(plugin_string_t *ret);