dart/src/plugin/plugn.dart


  late final _flutter_renderer_renderer_error_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<flutter_renderer_renderer_error_t>)>>(
      'flutter_renderer_renderer_error_free');
  late final _flutter_renderer_renderer_error_free =
      _flutter_renderer_renderer_error_freePtr.asFunction<
          void Function(ffi.Pointer<flutter_renderer_renderer_error_t>)>();

  void flutter_renderer_renderer_renderer_drop_own(
    flutter_renderer_renderer_own_renderer_t handle,
  ) {
    return _flutter_renderer_renderer_renderer_drop_own(
      handle,
    );
  }

  late final _flutter_renderer_renderer_renderer_drop_ownPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(flutter_renderer_renderer_own_renderer_t)>>(
      'flutter_renderer_renderer_renderer_drop_own');
  late final _flutter_renderer_renderer_renderer_drop_own =
      _flutter_renderer_renderer_renderer_drop_ownPtr.asFunction<
          void Function(flutter_renderer_renderer_own_renderer_t)>();

  flutter_renderer_renderer_borrow_renderer_t
      flutter_renderer_renderer_borrow_renderer(
    flutter_renderer_renderer_own_renderer_t handle,
  ) {
    return _flutter_renderer_renderer_borrow_renderer(
      handle,
    );
  }

  late final _flutter_renderer_renderer_borrow_rendererPtr = _lookup<
          ffi.NativeFunction<
              flutter_renderer_renderer_borrow_renderer_t Function(
                  flutter_renderer_renderer_own_renderer_t)>>(
      'flutter_renderer_renderer_borrow_renderer');
  late final _flutter_renderer_renderer_borrow_renderer =
      _flutter_renderer_renderer_borrow_rendererPtr.asFunction<
          flutter_renderer_renderer_borrow_renderer_t Function(
              flutter_renderer_renderer_own_renderer_t)>();

  void flutter_renderer_renderer_option_error_free(
    ffi.Pointer<flutter_renderer_renderer_option_error_t> ptr,
  ) {
    return _flutter_renderer_renderer_option_error_free(
      ptr,
    );
  }

  late final _flutter_renderer_renderer_option_error_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<flutter_renderer_renderer_option_error_t>)>>(
      'flutter_renderer_renderer_option_error_free');
  late final _flutter_renderer_renderer_option_error_free =
      _flutter_renderer_renderer_option_error_freePtr.asFunction<
          void Function(
              ffi.Pointer<flutter_renderer_renderer_option_error_t>)>();

  void plugin_error_free(
    ffi.Pointer<plugin_error_t> ptr,
  ) {
    return _plugin_error_free(
      ptr,
    );
  }

  late final _plugin_error_freePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<plugin_error_t>)>>(
      'plugin_error_free');
  late final _plugin_error_free = _plugin_error_freePtr
      .asFunction<void Function(ffi.Pointer<plugin_error_t>)>();

  void plugin_option_error_free(
    ffi.Pointer<plugin_option_error_t> ptr,
  ) {
    return _plugin_option_error_free(
      ptr,
    );
  }

  late final _plugin_option_error_freePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<plugin_option_error_t>)>>('plugin_option_error_free');
  late final _plugin_option_error_free = _plugin_option_error_freePtr
      .asFunction<void Function(ffi.Pointer<plugin_option_error_t>)>();

  void plugin_string_set(
    ffi.Pointer<plugin_string_t> ret,
    ffi.Pointer<ffi.Char> s,
  ) {
    return _plugin_string_set(
      ret,
      s,
    );
  }

  late final _plugin_string_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<plugin_string_t>,
              ffi.Pointer<ffi.Char>)>>('plugin_string_set');
  late final _plugin_string_set = _plugin_string_setPtr.asFunction<
      void Function(ffi.Pointer<plugin_string_t>, ffi.Pointer<ffi.Char>)>();

  void plugin_string_dup(
    ffi.Pointer<plugin_string_t> ret,
    ffi.Pointer<ffi.Char> s,
  ) {
    return _plugin_string_dup(
      ret,
      s,
    );
  }

  late final _plugin_string_dupPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<plugin_string_t>,
              ffi.Pointer<ffi.Char>)>>('plugin_string_dup');
  late final _plugin_string_dup = _plugin_string_dupPtr.asFunction<
      void Function(ffi.Pointer<plugin_string_t>, ffi.Pointer<ffi.Char>)>();

  void plugin_string_free(
    ffi.Pointer<plugin_string_t> ret,
  ) {
    return _plugin_string_free(
      ret,
    );
  }

  late final _plugin_string_freePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<plugin_string_t>)>>(
      'plugin_string_free');
  late final _plugin_string_free = _plugin_string_freePtr
      .asFunction<void Function(ffi.Pointer<plugin_string_t>)>();
}

final class __fsid_t extends ffi.Struct {
  @ffi.Array.multi([2])
  external ffi.Array<ffi.Int> __val;
}

final class max_align_t extends ffi.Opaque {}

final class plugin_string_t extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Size()
  external int len;
}

final class flutter_renderer_alignment_own_alignment_t extends ffi.Struct {
  @ffi.Int32()
  external int __handle;
}

final class flutter_renderer_alignment_borrow_alignment_t extends ffi.Struct {
  @ffi.Int32()
  external int __handle;
}

final class flutter_renderer_alignment_own_alignment_directional_t
    extends ffi.Struct {
  @ffi.Int32()
  external int __handle;
}

final class flutter_renderer_alignment_borrow_alignment_directional_t
    extends ffi.Struct {
  @ffi.Int32()
  external int __handle;
}

final class flutter_renderer_alignment_alignment_geometry_t extends ffi.Struct {
  @ffi.Uint8()
  external int tag;

  external UnnamedUnion1 val;
}

final class UnnamedUnion1 extends ffi.Union {
  external flutter_renderer_alignment_own_alignment_t alignment;

  external flutter_renderer_alignment_own_alignment_directional_t
      alignment_directional;
}

final class flutter_renderer_enums_main_axis_alignment_t extends ffi.Struct {
  @ffi.Uint8()
  external int tag;
}

final class flutter_renderer_enums_text_direction_t extends ffi.Struct {
  @ffi.Uint8()
  external int tag;
}

final class flutter_renderer_enums_vertical_direction_t extends ffi.Struct {
  @ffi.Uint8()
  external int tag;
}

final class flutter_renderer_enums_main_axis_size_t extends ffi.Struct {
  @ffi.Uint8()
  external int tag;
}

final class flutter_renderer_enums_text_baseline_t extends ffi.Struct {
  @ffi.Uint8()
  external int tag;
}

final class flutter_renderer_enums_cross_axis_alignment_t extends ffi.Struct {
  @ffi.Uint8()
  external int tag;
}

final class flutter_renderer_widget_own_row_t extends ffi.Struct {
  @ffi.Int32()
  external int __handle;
}

final class flutter_renderer_widget_borrow_row_t extends ffi.Struct {
  @ffi.Int32()
  external int __handle;
}

final class flutter_renderer_widget_own_col_t extends ffi.Struct {
  @ffi.Int32()
  external int __handle;
}

final class flutter_renderer_widget_borrow_col_t extends ffi.Struct {
  @ffi.Int32()
  external int __handle;
}

final class flutter_renderer_widget_own_text_t extends ffi.Struct {
  @ffi.Int32()
  external int __handle;
}

final class flutter_renderer_widget_borrow_text_t extends ffi.Struct {
  @ffi.Int32()
  external int __handle;
}

final class flutter_renderer_widget_own_text_rich_t extends ffi.Struct {
  @ffi.Int32()
  external int __handle;
}

final class flutter_renderer_widget_borrow_text_rich_t extends ffi.Struct {
  @ffi.Int32()
  external int __handle;
}

final class flutter_renderer_widget_widget_t extends ffi.Struct {
  @ffi.Uint8()
  external int tag;

  external UnnamedUnion2 val;
}

final class UnnamedUnion2 extends ffi.Union {
  external flutter_renderer_widget_own_col_t col;

  external flutter_renderer_widget_own_row_t row;

  external flutter_renderer_widget_own_text_t text;

  external flutter_renderer_widget_own_text_rich_t text_rich;
}

final class flutter_renderer_widget_list_widget_t extends ffi.Struct {
  external ffi.Pointer<flutter_renderer_widget_widget_t> ptr;

  @ffi.Size()
  external int len;
}

final class flutter_renderer_widget_option_cross_axis_alignment_t
    extends ffi.Struct {
  @ffi.Bool()
  external bool is_some;

  external flutter_renderer_widget_cross_axis_alignment_t val;
}

typedef flutter_renderer_widget_cross_axis_alignment_t
    = flutter_renderer_enums_cross_axis_alignment_t;

final class flutter_renderer_widget_option_main_axis_alignment_t
    extends ffi.Struct {
  @ffi.Bool()
  external bool is_some;

  external flutter_renderer_widget_main_axis_alignment_t val;
}

typedef flutter_renderer_widget_main_axis_alignment_t
    = flutter_renderer_enums_main_axis_alignment_t;

final class flutter_renderer_widget_option_main_axis_size_t extends ffi.Struct {
  @ffi.Bool()
  external bool is_some;

  external flutter_renderer_widget_main_axis_size_t val;
}

typedef flutter_renderer_widget_main_axis_size_t
    = flutter_renderer_enums_main_axis_size_t;

final class flutter_renderer_widget_option_text_direction_t extends ffi.Struct {
  @ffi.Bool()
  external bool is_some;

  external flutter_renderer_widget_text_direction_t val;
}

typedef flutter_renderer_widget_text_direction_t
    = flutter_renderer_enums_text_direction_t;

final class flutter_renderer_widget_option_text_baseline_t extends ffi.Struct {
  @ffi.Bool()
  external bool is_some;

  external flutter_renderer_widget_text_baseline_t val;
}

typedef flutter_renderer_widget_text_baseline_t
    = flutter_renderer_enums_text_baseline_t;

final class flutter_renderer_widget_option_vertical_direction_t
    extends ffi.Struct {
  @ffi.Bool()
  external bool is_some;

  external flutter_renderer_widget_vertical_direction_t val;
}

typedef flutter_renderer_widget_vertical_direction_t
    = flutter_renderer_enums_vertical_direction_t;

final class flutter_renderer_renderer_error_t extends ffi.Struct {
  @ffi.Uint8()
  external int tag;
}

final class flutter_renderer_renderer_own_renderer_t extends ffi.Struct {
  @ffi.Int32()
  external int __handle;
}

final class flutter_renderer_renderer_borrow_renderer_t extends ffi.Struct {
  @ffi.Int32()
  external int __handle;
}

final class flutter_renderer_renderer_option_error_t extends ffi.Struct {
  @ffi.Bool()
  external bool is_some;

  external flutter_renderer_renderer_error_t val;
}

final class plugin_option_error_t extends ffi.Struct {
  @ffi.Bool()
  external bool is_some;

  external plugin_error_t val;
}

typedef plugin_error_t = flutter_renderer_renderer_error_t;
typedef flutter_renderer_renderer_widget_t = flutter_renderer_widget_widget_t;
typedef plugin_own_renderer_t = flutter_renderer_renderer_own_renderer_t;
typedef flutter_renderer_widget_alignment_geometry_t
    = flutter_renderer_alignment_alignment_geometry_t;

const int _STDINT_H = 1;

const int _FEATURES_H = 1;

const int _DEFAULT_SOURCE = 1;

const int __GLIBC_USE_ISOC2X = 1;

const int __USE_ISOC11 = 1;

const int __USE_ISOC99 = 1;

const int __USE_ISOC95 = 1;

const int _POSIX_SOURCE = 1;

const int _POSIX_C_SOURCE = 200809;

const int __USE_POSIX = 1;

const int __USE_POSIX2 = 1;

const int __USE_POSIX199309 = 1;

const int __USE_POSIX199506 = 1;

const int __USE_XOPEN2K = 1;

const int __USE_XOPEN2K8 = 1;

const int _ATFILE_SOURCE = 1;

const int __WORDSIZE = 64;

const int __WORDSIZE_TIME64_COMPAT32 = 1;

const int __SYSCALL_WORDSIZE = 64;

const int __TIMESIZE = 64;

const int __USE_MISC = 1;

const int __USE_ATFILE = 1;

const int __USE_FORTIFY_LEVEL = 0;

const int __GLIBC_USE_DEPRECATED_GETS = 0;

const int __GLIBC_USE_DEPRECATED_SCANF = 0;

const int __GLIBC_USE_C2X_STRTOL = 1;

const int _STDC_PREDEF_H = 1;

const int __STDC_IEC_559__ = 1;

const int __STDC_IEC_60559_BFP__ = 201404;

const int __STDC_IEC_559_COMPLEX__ = 1;

const int __STDC_IEC_60559_COMPLEX__ = 201404;

const int __STDC_ISO_10646__ = 201706;

const int __GNU_LIBRARY__ = 6;

const int __GLIBC__ = 2;

const int __GLIBC_MINOR__ = 39;
